feat(usertask): Add action ID to result
- Also create seperate endpoint for finishing or cancelling manual tasks
- Fixes some leakage issues of finished tasks inaccessible to the user due to lane restrictions
